<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, Activity1!</string>
    <string name="app_name">RollMeter</string>
    <string name="act1">Activity1</string>
    <string name="act2">Activity2</string>
    <string name="title_activity_welcome">Welcome</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_measure">开始测量</string>
    <string name="title_activity_history">历史曲线</string>
    <string name="BasicInfor">基本信息</string>
    <string name="title_HelpF">帮助</string>
    <string name="StickNo">辊号</string>
    <string name="realoffset">实际位移</string>
    <string name="offsetparam">0</string>
    <string name="offsetunit">mm</string>
    <string name="realpos">实际坐标</string>
    <string name="posparam">0</string>
    <string name="posunit">mm</string>
    <string name="MaxTitle">最大坐标</string>
    <string name="MaxValueShow">0</string>
    <string name="MinTitle">最小坐标</string>
    <string name="MinValueShow">0</string>
    <string name="title_activity_parameter_set">测量参数</string>
    <string name="inputstr">参数输入</string>
    <string name="title1">辊号:</string>
    <string name="title2">辊子类型:</string>
    <string name="title3">辊子长度(mm)</string>
    <string name="title4">采样距离(mm)</string>
    <string name="title5">供应商</string>
    <string name="title6">测量方向</string>
    <string name="title7">偏移值(mm)</string>
    <string name="leftbuttonstr">向右</string>
    <string name="rightbuttonstr">向左</string>
    <string name="ClearButtonStr">清空</string>
    <string name="SaveButtonStr">保存</string>
    <string name="LongWarnning">请将测量仪移动到起始测量位置，并\n将位移传感器预紧至零位附近，按\n“置零”按钮</string>
    <string name="SmallTitleStr">实测位移</string>
    <string name="AdjustZero">零位校正</string>
    <string name="OffsetStr">0</string>
    <string name="GunNumberD">3345</string>
    <string name="GunTypeD">包胶软辊</string>
    <string name="GunLenD">5000 mm</string>
    <string name="LenthD">50 mm</string>
    <string name="SuppD">昆山中联</string>
    <string name="LastTestTitle">最近测量</string>
    <string name="LastTestDate">0325.16:05</string>
    <string name="GunNumTitle">测量辊子数量</string>
    <string name="GunNumData">12</string>
    <string name="CurveDataTitle">测量曲线数量</string>
    <string name="CurveData">105</string>
    <string name="ButtonTitle">选择辊号</string>
    <string name="CompanyName">公司名称</string>
    <string name="MeasureToolTitle">智能中高测量仪</string>
    <string name="MeasureDirectLeft">从左向右</string>
    <string name="MeasureDirectRight">从右向左</string>
    <string name="str_dialog_title">请稍等片刻</string>
    <string name="str_dialog_body">正在保存数据</string>
    <string name="title_activity_setting">系统参数</string>
    <string name="VersionN">173.0</string>
    <string name="ONOFF">ONFF</string>
    <string name="SoundSwitch">声音提示</string>
    <string name="BlueSet">蓝牙设置</string>
    <string name="LanguageSet">语言Lanugage</string>
    <string name="BatteryS">中高仪电量</string>
    <string name="VersionS">版本信息</string>
    <string name="BatteryP">40%</string>
    <string name="Arrow">》</string>
    <string name="ENC">中文</string>
    <string name="ENEN">English</string>
    <string name="BlueN">请点击选择蓝牙</string>
    <string name="title_activity_history_chart">HistoryChart</string>
    <string name="selectgun">选择辊号</string>
    <string name="selectdate">选择日期</string>
    <string name="title_activity_help_help">HelpHelp</string>
    <string name="PlConfirm">请确认</string>
    <string name="Confirm">确定</string>
    <string name="Cancles">取消</string>
    <string name="PlConfirmDelete">请确认是否删除数据</string>
    <string name="DateTime">日期:</string>
    <string name="history_x">辊子长度(mm)</string>
    <string name="history_y">辊子中高(mm)</string>
    <string name="onemore_return">再按一次返回</string>
    <string name="range_warnning">输入值不在范围内</string>
    <string name="input_warnning">带*的为必填项</string>
    <string name="set_zero">可用的测量范围</string>
    <string name="blue_warning">请先到系统设置界面设置蓝牙</string>
    <string name="data_warning">数据过少，不予保存!</string>
    <string name="test_mention">测量完成，请点击完成测量结束本次测量!</string>
    <string name="FinishButton">测量完成</string>
    <string name="parameter_warning">请先到参数设置界面设置参数</string>
    <string name="date_warning">所有日期</string>
    <string name="Operation_Direct">操作侧</string>
    <string name="Select_Direct">请选择操作侧</string>
    <string name="Direct_Left">左侧</string>
    <string name="Direct_Right">右侧</string>
    <string name="YSenoser_Small">传感器未与辊子接触，请先检查再测量！</string>
    <string name="YSenoser_Big">传感器位移值已达到上限，请重新置零再测量！</string>
    <string name="Encode_Pass">请输入密码</string>
    <string name="Encode_Length">请输入编码器滚轮周长</string>
    <string name="Pass_Warn">密码错误</string>
    <string name="Length_Warn">数值错误，范围150-200mm</string>

    <!--  BluetoothChat -->

</resources>
