<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="com.test.Setting"
    android:background="@drawable/AllBackGround">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/relativeLayoutTopS"
        android:background="@drawable/asetting"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true">

        <ImageButton
            android:layout_width="39dp"
            android:layout_height="39dp"
            android:id="@+id/imageButtonReturnS"
            android:layout_alignParentTop="false"
            android:layout_alignParentLeft="true"
            android:background="@drawable/returnb"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/relativeLayoutTopS"
        android:layout_alignParentBottom="true"
        android:id="@+id/relativeLayoutSetting"
        android:background="@drawable/settingb"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <com.test.widget.view.SlideSwitchView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mSlideSwitchView"
            android:layout_alignParentTop="false"
            android:layout_alignParentRight="true"
            android:layout_marginTop="140dp"
            android:layout_marginRight="270dp"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageViewBlueFS"
            android:background="@drawable/blue1"
            android:layout_marginTop="220dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="250dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/BlueSButton"
            android:layout_marginTop="225dp"
            android:clickable="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="300dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/BlueN"
                android:id="@+id/textBlue"
                android:layout_alignBaseline="@+id/BlueArrow"
                android:layout_alignBottom="@+id/BlueArrow"
                android:layout_toLeftOf="@+id/BlueArrow"
                android:layout_gravity="center"
                android:textSize="@dimen/Iamg_Text_Size"
                android:textColor="@drawable/NavigatBackGound" />

            <TextView
                android:id="@+id/BlueArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Arrow"
                android:textSize="@dimen/Title_Second_Text_Size"
                android:textColor="@android:color/background_dark"
                android:layout_above="@+id/LangArrow"
                android:layout_toLeftOf="@+id/imageViewBlueFS"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/LanSButton"
            android:layout_marginTop="315dp"
            android:clickable="true"
            android:layout_marginRight="300dp"
            android:layout_alignParentRight="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/textLang"
                android:layout_gravity="center"
                android:textSize="@dimen/Iamg_Text_Size"
                android:textColor="@drawable/NavigatBackGound" />

            <TextView
                android:id="@+id/LangArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Arrow"
                android:textSize="@dimen/Title_Second_Text_Size"
                android:textColor="@android:color/background_dark"
                android:visibility="invisible" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BatteryP"
            android:id="@+id/textBatteryN"
            android:layout_marginTop="415dp"
            android:textSize="@dimen/Iamg_Text_Size"
            android:textColor="@drawable/NavigatBackGound"
            android:layout_alignParentRight="true"
            android:layout_marginRight="330dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButtonBattery"
            android:layout_marginTop="405dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="210dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/EncodeText"
            android:layout_alignRight="@+id/textBatteryN"
            android:layout_marginTop="500dp"
            android:text="@string/VersionN"
            android:background="@android:color/transparent"
            android:textColor="@drawable/NavigatBackGound"
            android:gravity="right"
            android:textSize="@dimen/Iamg_Text_Size"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/posunit"
            android:id="@+id/textView"
            android:layout_alignTop="@+id/EncodeText"
            android:textColor="@drawable/NavigatBackGound"
            android:layout_toRightOf="@+id/EncodeText"
            android:textSize="@dimen/Iamg_Text_Size"
            android:layout_marginLeft="2dp" />

    </RelativeLayout>
</RelativeLayout>
